# autodiarize

./: Failsafe1.py  concat.py  failsafe.py  step3.py  step3.py~
LJ_Speech_dataset/lwaxana/: metadata.csv
LJ_Speech_dataset/picard/: metadata.csv
LJ_Speech_dataset/riker/: metadata.csv
LJ_Speech_dataset/riker2/: metadata.csv
LJ_Speech_dataset/troi/: metadata.csv
originals/francine1/: francine.srt  francine.txt
rye/: README.md  pyproject.toml
src/whisper_diarization/: __init__.py
